src/css/style.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

* {
  box-sizing: border-box;
}

:root {
  --amplify-primary-color: #222629;
  --amplify-primary-tint: #77848e;
  --amplify-primary-shade: #b6ccdd;
}

main {
  display: flex;
  position: relative;
  /* flex-direction: column; */
  /* justify-content: center; */
  /* align-items: center; */
  min-height: 75vh;
}

footer {
  width: 100%;
  height: 5vh;
  border-top: 1px solid #eaeaea;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #D14545;
  background-color: #212529;
}

footer img {
  margin-left: 0.5rem;
}

footer a {
  display: flex;
  justify-content: center;
  align-items: center;
}

a {
  color: inherit;
  text-decoration: none;
}

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 3rem;
  text-transform: uppercase;
}

.title,
.description {
  text-align: center;
}

.description {
  line-height: 1.5;
  font-size: 1.3rem;
}

code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;

  max-width: 800px;
  margin-top: 3rem;
}

.card {
  margin: 1rem;
  flex-basis: 45%;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
}

.card:hover,
.card:focus,
.card:active {
  color: #0070f3;
  border-color: #0070f3;
}

.card h3 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.logo {
  height: 1em;
}

.mainLogo {
  height: 18rem;
  object-fit: cover;
  left: 50%;
  position: relative;
  transform: translateX(-50%);
}

.header {
  padding: 1.5rem;
  height: 10vh;
}

.menu {
  justify-content: flex-end;
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}

.flame {
  position: relative;
  left: 50%;
  transform: translateX(-50%);
}

amplify-s3-image {
  --height: 300px;
  --width: 300px;
}
.image-container {
  box-shadow: -7px 20px 41px 0 rgba(0, 0, 0, 0.41);
  width: 300px;
  height: 300px;
  max-width: 400px;
  max-height: 400px;
  position: relative;
  display: inline-block;
  overflow: hidden;
  margin: 0;
}
.uploaded-image {
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  height: 100%;
  width: 100%;
  transform: translate(-50%, -50%);
}

.map__container {
  position: relative;
  height: 85vh;
  width: 100%;
  /* bottom: 20vh; */
  top: 0;
}

.nav-item a {
  color: #D14545!important;

  transition: all .3s;

}

.nav-item a:hover {
  color: yellow!important;
}

.mapboxgl-control-container {
  display: none!important;
}

